# Shiroyaku

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
src/: main.rs
src/embedding/: mod.rs
src/fetch/: mod.rs
src/search/: mod.rs
src/ui/: mod.rs
