[package]
name = "shiroyaku"
version = "0.1.0"
edition = "2021"

[dependencies]
# Fetching data from MedlinePlus
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"

# LanceDB with embedding
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"
arrow = "56"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Embedding
fastembed = "5.11"

# Error handling
anyhow = "1.0"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
indicatif = "0.17"
