[package]
name = "shiroyaku"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Data fetching
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
chrono = { version = "0.4", features = ["clock"] }
indicatif = "0.17"

# LanceDB with embedding
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"
arrow = "56"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Embedding
fastembed = "5.11"
